# Copyright 2023 Intrinsic Innovation LLC

module(
    name = "ai_intrinsic_sdks",
    version = "",
)

non_module_deps = use_extension("//bazel:non_module_deps.bzl", "non_module_deps_ext")

######
# Go #
######

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# This can be updated with buildozer
# https://github.com/bazelbuild/buildtools/blob/master/buildozer/README.md
use_repo(
    go_deps,
    "com_github_andydunstall_piko",
    "com_github_authzed_authzed_go",
    "com_github_bazelbuild_buildtools",
    "com_github_bazelbuild_remote_apis_sdks",
    "com_github_bits_and_blooms_bitset",
    "com_github_cenkalti_backoff_v4",
    "com_github_golang_glog",
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_gnostic",  
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_google_safearchive",
    "com_github_google_subcommands",
    "com_github_gorilla_websocket",
    "com_github_masterminds_semver",
    "com_github_pborman_uuid",
    "com_github_pkg_errors",
    "com_github_protocolbuffers_txtpbfmt",
    "com_github_robfig_cron_v3",
    "com_github_rs_xid",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stoewer_go_strcase",
    "com_github_stretchr_testify",
    "com_google_cloud_go_longrunning",
    "in_gopkg_xmlpath_v2",
    "in_gopkg_yaml_v3",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_ocagent",
    "io_opencensus_go_contrib_exporter_prometheus",
    "io_opencensus_go_contrib_exporter_stackdriver",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_propagators_b3",
    "io_opentelemetry_go_contrib_propagators_opencensus",
    "io_opentelemetry_go_otel",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_text",
    "org_uber_go_atomic",
)

##########
# Python #
##########

PYTHON_VERSION = "3.11"

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.89.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = PYTHON_VERSION,
)

bazel_dep(name = "pybind11_bazel", version = "3.0.0")
bazel_dep(name = "pybind11_abseil", version = "202402.0")
bazel_dep(name = "pybind11_protobuf", version = "0.0.0-20250210-f02a2b7")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # Enable the Bazel downloader for whl fetches, see
    # https://rules-python.readthedocs.io/en/latest/pypi-dependencies.html#bazel-downloader-and-multi-platform-wheel-hub-repository.
    experimental_index_url = "https://pypi.org/simple",
    experimental_index_url_overrides = {
        "blender-headless": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
        "cadexchanger": "https://download.cadexchanger.com/python",
        "pyrender": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
        "pytorch3d": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
        "tensorflow": "https://us-central1-python.pkg.dev/intrinsic-mirror/intrinsic-public-python/simple",
    },
    hub_name = "ai_intrinsic_sdks_pip_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
    simpleapi_skip = [
        "collision-avoidance-metric",
        "proto-breaking-change-detector",
    ],
)
use_repo(pip, "ai_intrinsic_sdks_pip_deps")

#################
# C++ toolchain #
#################

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Inspect supported toolchains at https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)

llvm.toolchain(
    llvm_version = "21.1.0",
)

use_repo(non_module_deps, "intrinsic_llvm_sysroot")

llvm.sysroot(
    label = "@intrinsic_llvm_sysroot//:all_files",
    targets = ["linux-x86_64"],
)
use_repo(
    llvm,
    "llvm_toolchain",
)

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

######################
# Bazel dependencies #
######################

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "abseil-py", version = "2.1.0", repo_name = "com_google_absl_py")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260211.0")
bazel_dep(name = "cel-cpp", version = "0.14.0", repo_name = "com_google_cel_cpp")
bazel_dep(name = "cel-spec", version = "0.25.1", repo_name = "com_google_cel_spec")
bazel_dep(name = "dumb-init", version = "1.2.5")
bazel_dep(name = "eigen", version = "5.0.1.bcr.1", repo_name = "com_gitlab_libeigen_eigen")
bazel_dep(name = "etherlab-ethercat", version = "1.6.7")
bazel_dep(name = "flatbuffers", version = "25.12.19", repo_name = "com_github_google_flatbuffers")
bazel_dep(name = "fuzztest", version = "20250805.0", repo_name = "com_google_fuzztest")
bazel_dep(name = "google_benchmark", version = "1.9.5", repo_name = "com_google_benchmark")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
bazel_dep(name = "googleapis-python", version = "1.0.0")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983", repo_name = "com_google_googleapis")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
bazel_dep(name = "grpc_ecosystem_grpc_gateway", version = "2.27.3", repo_name = "com_github_grpc_ecosystem_grpc_gateway_v2")
bazel_dep(name = "grpc", version = "1.74.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "jsonnet", version = "0.21.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "com_github_nlohmann_json")
bazel_dep(name = "opencensus-cpp", version = "0.0.0-20230502-50eb5de.bcr.2", repo_name = "io_opencensus_cpp")
bazel_dep(name = "or-tools", version = "9.12", repo_name = "or_tools")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf-matchers", version = "0.1.1", repo_name = "com_github_inazarenko_protobuf_matchers")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "tar.bzl", version = "0.9.0")

##############
# Containers #
##############

bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "container_structure_test", version = "1.22.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base",
    digest = "sha256:b0510424f0c7c1d6fdae75ef5c1d349fa72d312e96f69728fad6beb04755b8b4",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
)

# Version pinned to last known version for EC-Engineer, due to b/478927987.
oci.pull(
    name = "distroless_base_bookworm",
    digest = "sha256:9e9b50d2048db3741f86a48d939b4e4cc775f5889b3496439343301ff54cdba8",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
    tag = "bookworm",
)
oci.pull(
    name = "distroless_cc",
    digest = "sha256:e1cc90d06703f5dc30ae869fbfce78fce688f21a97efecd226375233a882e62f",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "distroless_python3",
    digest = "sha256:cb8e12bde699c3912ed13022ed9aba6a9e6f093cf6e3ad5ded0fca36ccaedf93",
    image = "gcr.io/distroless/python3",
    platforms = ["linux/amd64"],
)

# NOTE: Bazel reports wrong usage of the repos as a warning
# BUG: https://github.com/bazel-contrib/rules_oci/issues/727
use_repo(
    oci,
    "distroless_base",
    "distroless_base_bookworm",
    "distroless_base_bookworm_linux_amd64",
    "distroless_base_linux_amd64",
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_python3",
    "distroless_python3_linux_amd64",
)

############################
# Missing Google OSS files #
############################

use_repo(
    non_module_deps,
    "com_google_xls_strong_int_h",
)
